# tls-cert-monitor

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEAD_CODE_AUDIT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  config.windows.example.yaml  config.yaml  dev_server.py  docker-compose.dev.yml  docker-compose.yml  example.config.yaml  go.mod  go.sum  index.html  index2.html  just_ansible.md  lint_errors  main.go  main.py  main_old.py  nuitka-crash-report.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
YOYO/: windows_service.py
ansible/: README.md  ansible.cfg
assets/: README.md
cache/: cache.gob
docker/: Dockerfile  docker-compose.yml  docker.config.yaml  prometheus.yml
docs/: E2E_TESTING.md  INTEGRATION_TESTING.md  WINDOWS_DEPLOYMENT.md
scripts/: Install-WindowsService-NSSM.ps1  Install-WindowsService.ps1  com.tlscertmonitor.service.plist  generate-config-dev.sh  generate-test-certs.sh  install-linux-service.sh  install-macos-service.sh  install-windows-service-native.bat  install-windows-service.bat  test-windows-service.ps1  tls-cert-monitor.service
test/: config_test.go  constants.go  exclude_directories_test.go  issuer_classification_test.go  issuer_debug_test.go  metrics_test.go  new_features_integration_test.go  scanner_test.go  server_test.go  utils_test.go
tests/: __init__.py  test_api.py  test_cache.py  test_config.py  test_e2e_docker.py  test_hot_reload.py  test_integration.py  test_metrics.py  test_scanner.py  test_security.py  test_windows_service.py
tls_cert_monitor/: __init__.py  api.py  cache.py  config.py  hot_reload.py  logger.py  metrics.py  scanner.py  service_wrapper.py  windows_service.py  windows_service_handler.py
(+89 files in other folders)
